--- a/javacc/src/main/resources/templates/CharStream.template
+++ b/javacc/src/main/resources/templates/CharStream.template
@@ -60,16 +60,16 @@ public interface CharStream extends java.io.Closeable {
 #fi
 
   /**
-   * Returns index of the first character for current token (being
+   * @return Index of the first character for current token (being
    * matched after the last call to {@link #beginToken beginToken()}).
    */
-  int getBeginOffset();
+  int getBegin();
 
   /**
-   * Returns index of the last character for current token (being
+   * @return Index of the last character for current token (being
    * matched after the last call to {@link #beginToken beginToken()}).
    */
-  int getEndOffset();
+  int getEnd();
 #if KEEP_LINE_COLUMN
 
   /**
