--- a/javacc/src/main/resources/templates/JavaCharStream.template
+++ b/javacc/src/main/resources/templates/JavaCharStream.template
@@ -12,9 +12,9 @@ public final class JavaCharStream implements CharStream {
   /** Offset to the next character in the buffer, if backed up. */
   private int offset;
   /** Index of the first character of the current token, inclusive. */
-  private int beginOffset;
+  private int begin;
   /** Index of the last character of the current token, exclusive. */
-  private int endOffset;
+  private int end;
 #if KEEP_LINE_COLUMN
   /** Line number of the first character of the current token. */
   private int line = 1;
@@ -52,7 +52,7 @@ public final class JavaCharStream implements CharStream {
    */
   public JavaCharStream(java.io.Reader reader, int offset) {
     this(reader);
-    beginOffset = offset;
+    begin = offset;
   }
 #if KEEP_LINE_COLUMN
 
@@ -79,7 +79,7 @@ public final class JavaCharStream implements CharStream {
    */
   public JavaCharStream(java.io.Reader reader, int offset, int startLine, int startColumn) {
     this(reader);
-    beginOffset = offset;
+    begin = offset;
     line = startLine;
     column = startColumn;
   }
@@ -97,7 +97,7 @@ public final class JavaCharStream implements CharStream {
 #fi
 
   public void beginToken() throws java.io.IOException {
-    beginOffset = endOffset;
+    begin = end;
     if (offset == length) {
       // No backed up characters.
       length = 0;
@@ -118,7 +118,7 @@ public final class JavaCharStream implements CharStream {
   public int readChar() throws java.io.IOException {
     if (offset < length) {
       // Read backed up characters.
-      endOffset++;
+      end++;
       return buffer[offset++];
     }
     // Read new character by reader and put it into buffer.
@@ -217,7 +217,7 @@ public final class JavaCharStream implements CharStream {
    * @param c Character to append.
    */
   private void appendChar(int c) {
-    endOffset++;
+    end++;
     if (offset == buffer.length) {
       int newLength = buffer.length * 3 / 2 + 1;
       buffer = copyOf(buffer, newLength);
@@ -245,7 +245,7 @@ public final class JavaCharStream implements CharStream {
   }
 
   public void backup(int amount) {
-    endOffset -= amount;
+    end -= amount;
     offset -= amount;
   }
 #if KEEP_IMAGE
@@ -311,12 +311,12 @@ public final class JavaCharStream implements CharStream {
   }
 #fi
 
-  public int getBeginOffset() {
-    return beginOffset;
+  public int getBegin() {
+    return begin;
   }
 
-  public int getEndOffset() {
-    return endOffset;
+  public int getEnd() {
+    return end;
   }
 #if KEEP_LINE_COLUMN
 
@@ -411,7 +411,7 @@ public final class JavaCharStream implements CharStream {
         " at " + getEndLine() + "," + getEndColumn());
 #else
     throw new java.io.IOException("Illegal hex digit in escape sequence '" + (char) c + "'" +
-        " at index " + getEndOffset());
+        " at index " + getEnd());
 #fi
   }
 }
