--- a/javacc/src/main/resources/templates/Token.template
+++ b/javacc/src/main/resources/templates/Token.template
@@ -1,14 +1,12 @@
-/**
- * Describes the input token stream.
- */
+/** Describes the input token stream. */
 #if TOKEN_EXTENDS
 public class Token extends ${TOKEN_EXTENDS} implements java.io.Serializable {
 #else
 public class Token implements java.io.Serializable {
 #fi
   private int kind;
-  private int beginOffset;
-  private int endOffset;
+  private final int begin;
+  private final int end;
 #if KEEP_LINE_COLUMN
   private int beginLine;
   private int beginColumn;
@@ -43,87 +41,59 @@ public class Token implements java.io.Serializable {
    */
   public Token specialToken;
 
-  /** No-argument constructor */
-  public Token() {}
-
-  /** Constructs a new token for the specified Image. */
-  public Token(int kind) {
+  public Token(int kind, int begin, int end) {
 #if KEEP_IMAGE
-    this(kind, null);
+    this(kind, begin, end, null);
 #else
+    if (begin > end) { throw new IllegalArgumentException(); }
     this.kind = kind;
+    this.begin = begin;
+    this.end = end;
 #fi
   }
 #if KEEP_IMAGE
 
-  /** Constructs a new token for the specified Image and Kind. */
-  public Token(int kind, String image) {
+  public Token(int kind, int begin, int end, String image) {
+    if (begin > end) { throw new IllegalArgumentException(); }
     this.kind = kind;
+    this.begin = begin;
+    this.end = end;
     this.image = image;
   }
 #fi
 
-  /**
-   * Gets an integer that describes the kind of this token.
-   *
-   * This numbering system is determined by JavaCCParser, and a table of these numbers is
-   * stored in the file ...Constants.java.
-   *
-   * @return Token kind.
-   */
+  /** @return Token kind. */
   public int getKind() {
     return kind;
   }
 
-  /**
-   * Change token kind.
-   *
-   * @param kind New token kind.
-   */
+  /** @param kind New token kind. */
   public void setKind(int kind) {
     this.kind = kind;
   }
 #if KEEP_IMAGE
 
-  /**
-   * Gets text matched by this token.
-   *
-   * @return Token image.
-   */
+  /** @return Token image. */
   public String getImage() {
     return image;
   }
 
-  /**
-   * Change token image.
-   *
-   * @param image New token image.
-   */
+  /** @param image New token image. */
   public void setImage(String image) {
     this.image = image;
   }
 #fi
 
   /** @return Index of the first character of the token, inclusive. */
-  public int getBeginOffset() {
-    return beginOffset;
+  public int getBegin() {
+    return begin;
   }
 
   /** @return Index of the last character of the token, exclusive. */
-  public int getEndOffset() {
-    return endOffset;
+  public int getEnd() {
+    return end;
   }
 
-  /**
-   * Set index of first and last token character.
-   *
-   * @param begin Index of the first character of the token, inclusive.
-   * @param end   Index of the last character of the token, exclusive.
-   */
-  public void setOffset(int begin, int end) {
-    beginOffset = begin;
-    endOffset = end;
-  }
 #if KEEP_LINE_COLUMN
 
   /** @return The line number of the first character of this token. */
@@ -162,7 +132,7 @@ public class Token implements java.io.Serializable {
   }
 #fi
 
-  /** Returns the image. */
+  /** @return The image. */
   public String toString() {
 #if KEEP_IMAGE
     return image;
@@ -172,34 +142,19 @@ public class Token implements java.io.Serializable {
   }
 #if KEEP_IMAGE
 
-  /**
-   * Returns a new Token object, by default. However, if you want, you
-   * can create and return subclass objects based on the value of ofKind.
-   * Simply add the cases to the switch for all those special cases.
-   * For example, if you have a subclass of Token called IDToken that
-   * you want to create if ofKind is ID, simply add something like :
-   *
-   * case MyParserConstants.ID : return new IDToken(ofKind, image);
-   *
-   * to the following switch statement. Then you can cast matchedToken
-   * variable to the appropriate type and use it in your lexical actions.
-   *
-   * @param ofKind Token kind.
-   * @param image  Token image.
-   * @return New token instance.
-   */
-  public static Token newToken(int ofKind, String image) {
-    switch(ofKind) {
-      default: return new Token(ofKind, image);
+  public static Token newToken(int kind, int begin, int end, String image) {
+    switch(kind) {
+      default:
+        return new Token(kind, begin, end, image);
+    }
+  }
+#else
+
+  public static Token newToken(int kind, int begin, int end) {
+    switch(kind) {
+      default:
+        return new Token(kind, begin, end);
     }
   }
 #fi
-
-  public static Token newToken(int ofKind) {
-#if KEEP_IMAGE
-    return newToken(ofKind, null);
-#else
-    return new Token(ofKind);
-#fi
-  }
 }
