--- a/javacc/src/main/resources/templates/SimpleCharStream.template
+++ b/javacc/src/main/resources/templates/SimpleCharStream.template
@@ -12,9 +12,9 @@ public final class SimpleCharStream implements CharStream {
   /** Offset to the next character in the buffer, if backed up. */
   private int offset;
   /** Index of the first character of the current token, inclusive. */
-  private int beginOffset;
+  private int begin;
   /** Index of the last character of the current token, exclusive. */
-  private int endOffset;
+  private int end;
 #if KEEP_LINE_COLUMN
   /** Line number of the first character of the current token. */
   private int line = 1;
@@ -52,7 +52,7 @@ public final class SimpleCharStream implements CharStream {
    */
   public SimpleCharStream(java.io.Reader reader, int offset) {
     this(reader);
-    beginOffset = offset;
+    begin = offset;
   }
 #if KEEP_LINE_COLUMN
 
@@ -79,7 +79,7 @@ public final class SimpleCharStream implements CharStream {
    */
   public SimpleCharStream(java.io.Reader reader, int offset, int startLine, int startColumn) {
     this(reader);
-    beginOffset = offset;
+    begin = offset;
     line = startLine;
     column = startColumn;
   }
@@ -97,7 +97,7 @@ public final class SimpleCharStream implements CharStream {
 #fi
 
   public void beginToken() throws java.io.IOException {
-    beginOffset = endOffset;
+    begin = end;
     if (offset == length) {
       // No backed up characters.
       length = 0;
@@ -118,7 +118,7 @@ public final class SimpleCharStream implements CharStream {
   public int readChar() throws java.io.IOException {
     if (offset < length) {
       // Read backed up characters.
-      endOffset++;
+      end++;
       return buffer[offset++];
     }
     // Read new character by reader and put it into buffer.
@@ -145,7 +145,7 @@ public final class SimpleCharStream implements CharStream {
    * @param c Character to append.
    */
   private void appendChar(int c) {
-    endOffset++;
+    end++;
     if (offset == buffer.length) {
       int newLength = buffer.length * 3 / 2 + 1;
       buffer = copyOf(buffer, newLength);
@@ -173,7 +173,7 @@ public final class SimpleCharStream implements CharStream {
   }
 
   public void backup(int amount) {
-    endOffset -= amount;
+    end -= amount;
     offset -= amount;
   }
 #if KEEP_IMAGE
@@ -239,12 +239,12 @@ public final class SimpleCharStream implements CharStream {
   }
 #fi
 
-  public int getBeginOffset() {
-    return beginOffset;
+  public int getBegin() {
+    return begin;
   }
 
-  public int getEndOffset() {
-    return endOffset;
+  public int getEnd() {
+    return end;
   }
 #if KEEP_LINE_COLUMN
 
