--- a/javacc/src/main/resources/templates/Token.template
+++ b/javacc/src/main/resources/templates/Token.template
@@ -8,10 +8,8 @@ public class Token implements java.io.Serializable {
   private final int begin;
   private final int end;
 #if KEEP_LINE_COLUMN
-  private int beginLine;
-  private int beginColumn;
-  private int endLine;
-  private int endColumn;
+  private int line;
+  private int column;
 #fi
 #if KEEP_IMAGE
   private String image;
@@ -97,38 +95,24 @@ public class Token implements java.io.Serializable {
 #if KEEP_LINE_COLUMN
 
   /** @return The line number of the first character of this token. */
-  public int getBeginLine() {
-    return beginLine;
+  public int getLine() {
+    return line;
   }
 
   /** @return The column number of the first character of this token. */
-  public int getBeginColumn() {
-    return beginColumn;
-  }
-
-  /** @return The line number of the last character of this token. */
-  public int getEndLine() {
-    return endLine;
-  }
-
-  /** @return The column number of the last character of this token. */
-  public int getEndColumn() {
-    return endColumn;
+  public int getColumn() {
+    return column;
   }
 
   /**
    * Set token line and column numbers.
    *
-   * @param beginLine   The line number of the first character of this token
-   * @param beginColumn The column number of the first character of this token.
-   * @param endLine     The line number of the last character of this token.
-   * @param endColumn   The column number of the last character of this token.
+   * @param line   The line number of the first character of this token
+   * @param column The column number of the first character of this token.
    */
-  public void setLineColumn(int beginLine, int beginColumn, int endLine, int endColumn) {
-    this.beginLine = beginLine;
-    this.beginColumn = beginColumn;
-    this.endLine = endLine;
-    this.endColumn = endColumn;
+  public void setLineColumn(int line, int column) {
+    this.line = line;
+    this.column = column;
   }
 #fi
 
